--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -17,5 +17,7 @@
         <button type="submit">Login</button>
         <p>Si no tienes cuenta, regístrate</p>
         <button><a href="/register">Sign Up</a></button>
+          <button><a href="/api/session/github"></a>GitHub</button>
     </form>
-</div>
+ 
+</div> 
