--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -288,6 +288,7 @@ header {
   background-color: #007bff;
   color: #fff;
   cursor: pointer;
+  margin:10px;
 }
 
 .container-login form button:hover {
